@@ -4,9 +4,9 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.util.Arrays;
 
-import org.apache.commons.io.FileUtils;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.MojoFailureException;
 import org.apache.maven.shared.model.fileset.FileSet;
@@ -248,6 +248,6 @@ public class TestMetaOutputDifferenceGeneratorMojo {
   }
 
   private String getProjectFileContent(String path) throws IOException {
-    return FileUtils.readFileToString(getProjectFile(path));
+    return Files.readString(getProjectFile(path).toPath());
   }
 }
